# final_fantasy

./: .env.example  .gitignore  PIPELINE_SPEC_FULL.md  README.md  RUNBOOK.md  SPEC_CONFORMANCE_REPORT.md  SPEC_TODO.md  api_assets.py  api_leagues.py  pyproject.toml
.github/workflows/: pipeline_daily.yml  pipeline_weekly.yml
admin/: app.py  requirements.txt
scripts/: discover_leagues.py  seed_registry.py
sql/setup/: 01_permanent_tables.sql  02_league_registry.sql
src/pipeline/: config.py  db.py
src/pipeline/api/: client.py  endpoints.py  schemas.py
src/pipeline/extract/: events.py  leagues.py  seasons.py  teams.py
src/pipeline/load/: upsert.py
src/pipeline/runners/: daily_update.py  full_refresh.py  onboard.py  scheduler.py  shared.py
src/pipeline/sql/: executor.py
src/pipeline/sql/queries/: 01_leagues_current.sql  02_season_windows.sql  03_web_events.sql  04_events_scored.sql  05_events_split.sql  06_asset_last_10.sql  07_events_future_elos.sql  08_assets_future.sql  09_assets_stats_at.sql  (+8 more)
src/pipeline/transform/: elo.py  luck.py  normalize.py  stats.py  tiers.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_ci/: test_workflows.py
tests/test_extract/: test_events.py
tests/test_integration/: test_smoke.py
tests/test_load/: test_upsert.py
tests/test_repo/: test_legacy_cleanup.py
tests/test_runners/: test_onboard.py  test_scheduler.py  test_shared.py  test_sql_order.py
tests/test_sql/: test_query_inventory.py
tests/test_transform/: test_elo.py  test_luck.py  test_normalize.py  test_stats.py  test_tiers.py
